Update contact email for Delicatessen

--- a/index.html
+++ b/index.html
@@ -1323,7 +1323,7 @@
             <p>Restaurant Delicatessen</p>
             <p>📍 Adresse : 21, rue Alfred de Musset, TOULON 83100</p>
             <p>📞 Téléphone : +33 6 37 37 47 99</p>
-            <p>📧 Email : contact@delicatessen.com</p>
+            <p>📧 Email : contact@delicatessen-toulon.fr</p>
             <p>🌐 Site web : https://delicatessen-toulon.fr</p>
             <br>
             <p><strong>Horaires de livraison :</strong></p>
